--- a/1.md
+++ b/1.md
@@ -1,3 +1,18 @@
 # Advisory #1
-## vscode-sass-lint (aka Sass Lint) remote code execution via crafted workspace configuration
-### CVE ID
+## Blind SQLi on the wordpress plugin SiteGround Security
+## CVE ID
+Not assigned yet
+## Vendor
+SiteGround
+## Affected Product
+SiteGround Security (wordpress plugin)
+## Affected Versions
+1.3.0
+## Vulnerability Type
+SQL injection
+## Description
+SiteGround Security of the affected version has multilpe parts of code that do not properly sanitize user inputs, leading to SQL injection.
+## Status
+fixed
+## Recommendation
+Update to the lates version.
