--- a/1.md
+++ b/1.md
@@ -1,5 +1,4 @@
-# Advisory #1
-## Blind SQLi on the wordpress plugin SiteGround Security
+# Advisory #1 Blind SQLi on the wordpress plugin SiteGround Security
 ## CVE ID
 Not assigned yet
 ## Vendor
