--- a/1.md
+++ b/1.md
@@ -14,4 +14,4 @@ SiteGround Security of the affected version has multilpe parts of code that do n
 ## Status
 fixed
 ## Recommendation
-Update to the lates version.
+Update to the latest version.
