--- a/2.md
+++ b/2.md
@@ -12,6 +12,6 @@ Reflected XSS
 ## Description
 SiteGround Security of the affected version does not properly sanitize some user inputs, leading to SQL injection.
 ## Status
-fixed
+fixed in 2.1.0
 ## Recommendation
-Update to the latest version.
+Update to 2.1.0 or above
