--- a/2.md
+++ b/2.md
@@ -10,7 +10,7 @@ tutor (wordpress plugin)
 ## Vulnerability Type
 Reflected XSS
 ## Description
-SiteGround Security of the affected version does not properly sanitize some user inputs, leading to SQL injection.
+tutor of the affected version does not properly sanitize some user inputs, leading to SQL injection.
 ## Status
 fixed in 2.1.0
 ## Recommendation
